added photo viewing to index

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,4 +2,10 @@
 	<head>
 		<h1>MyGram</h1>
 	</head>
+	<body>
+		<% @posts.each do |post| %>
+		<%= image_tag post.image.url(:medium) %>
+		<%= post.caption %>
+		<% end %>
+	</body>
 </html>
