--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,21 @@
 <html>
 	<head>
-		<h1>MyGram</h1>
 	</head>
 	<body>
 		<% @posts.each do |post| %>
-		<%= image_tag post.image.url(:medium) %>
-		<%= post.caption %>
+		<div class = 'posts-wrapper'>
+			<div class = 'row'>
+				<div class = 'post-head'>
+					<div class = 'name'>
+						Omar
+					</div>
+				</div>
+			<div class = 'image-center-block'>
+				<%= link_to (image_tag post.image.url(:medium)),post_path(post) %>
+			</div>
+		<p class = 'caption'><%= post.caption %></p>
+			</div>
+		</div>
 		<% end %>
 	</body>
 </html>
